--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,12 @@
-# ===== PYTORCH (Python 3.13 compatible) =====
-torch==2.6.0
-torchvision==0.21.0
+torch==2.2.2
+torchvision==0.17.2
+ultralytics==8.1.0
 
-# ===== YOLO / Ultralytics =====
-ultralytics
-
-# ===== FLASK BACKEND =====
 Flask==3.0.3
+gunicorn==22.0.0
 
-# ===== IMAGE PROCESSING =====
 Pillow==10.4.0
-
-# ===== PDF GENERATION =====
 reportlab==4.2.0
 
-# ===== UTILITIES =====
-numpy==2.1.3
-opencv-python-headless==4.11.0.86
+numpy==1.26.4
+opencv-python-headless==4.10.0.84
