--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+# Flask + server
 Flask==3.0.3
 gunicorn==22.0.0
 
-torch==2.2.2
-torchvision==0.17.2
-ultralytics==8.1.0
+# YOLO / Ultralytics
+ultralytics==8.3.246
 
+# PyTorch CPU (untuk server cloud)
+torch==2.5.1
+torchvision==0.20.1
+
+# Image + PDF
 Pillow==10.4.0
 reportlab==4.2.0
+
+# Utils
 numpy==1.26.4
 
+# OpenCV headless (menghindari error libGL)
 opencv-python-headless==4.10.0.84
